--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="menu_home">Report</string>
     <string name="menu_register">Register Item</string>
     <string name="menu_sales">Sales</string>
+    <string name="menu_products">Products</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
