--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Barcode Reader</string>
+    <string name="app_name">DSPRS</string>
     <string name="title_activity_main">ActivityMain</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -11,6 +11,7 @@
     <string name="menu_home">Report</string>
     <string name="menu_register">Register Item</string>
     <string name="menu_sales">Sales</string>
+    <string name="menu_purchase">Add Purchase</string>
     <string name="menu_products">Products</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
